--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,10 @@
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
 }
+.newsletter-section {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+}
 .footer-section {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
