--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,8 @@
 .about-section,
 .services-section,
 .newsletter-section,
-.watch-section {
+.watch-section,
+.title-wrapper {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
 }
@@ -85,6 +86,25 @@
   .about-section .about-right {
     width: 100%;
   }
+}
+
+/* Title Wrapper */
+
+.title-wrapper .title-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(236, 72, 153, 0.8),
+    /* Pink with 80% opacity */ rgba(139, 92, 246, 0.8),
+    /* Purple with 80% opacity */ rgba(59, 130, 246, 0.8)
+      /* Blue with 80% opacity */
+  );
+  z-index: 1;
 }
 
 @media (max-width: 500px) {
