--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+VN+Guides&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
+
+:root {
+  --font-primary: "Poppins", sans-serif;
+
+  /* Color variables */
+  --color-gray-900: #202225;
+  --color-gray-800: #2f3136;
+  --color-gray-700: #36393f;
+  --color-gray-600: #4f545c;
+  --color-gray-400: #d4d7dc;
+  --color-gray-300: #e3e5e8;
+  --color-gray-200: #ebedef;
+  --color-gray-100: #f2f3f5;
+  --color-primary: #5865f2;
+  --color-custom-dark: #ff3737; /* Main stuff we wanna use */
+}
+
+@layer utilities {
+  .font-primary {
+    font-family: var(--font-primary);
+  }
+
+  /* Optional custom text/bg classes using colors */
+  .text-primary {
+    color: var(--color-primary);
+  }
+
+  .bg-custom-dark {
+    color: var(--color-custom-dark);
+  }
+}
 
 .custom-swiper .swiper-pagination-bullet {
   background-color: white; /* default bullet color */
