--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,22 @@
 .sidebar-scroll::-webkit-scrollbar-thumb:hover {
   background-color: #a0aec0; /* Tailwind gray-500 */
 }
+
+
+/* Main Scroll Bar */
+.main-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+
+.main-scroll::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.main-scroll::-webkit-scrollbar-thumb {
+  background-color: #cbd5e0; /* Tailwind gray-400 */
+  border-radius: 4px;
+}
+
+.main-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #a0aec0; /* Tailwind gray-500 */
+}
