fixed: MUI table

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -158,3 +158,16 @@
   transform: scale(1.01);
   z-index: 10;
 }
+
+
+
+
+/* Table */
+/* DataTable.css */
+
+.custom-header {
+  background-color: #1e293b; /* dark blue-gray */
+  color: #000000;            /* light text */
+  font-weight: bold;
+  font-size: 16px;
+}
