--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -64,7 +64,7 @@
   color: white;
   position: fixed;
   border-radius: 20px;
-  right: 20px;
+  left: 20px;
   bottom: -60px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
   transition: 0.6s;
