--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @config "../tailwind.config.js";
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+
 
 :root {
   --font-primary: "Poppins", sans-serif;
@@ -65,6 +67,7 @@
 /* Main Scroll Bar */
 .main-scroll::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 .main-scroll::-webkit-scrollbar-track {
