--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @config "../tailwind.config.js";
-@import '@fortawesome/fontawesome-free/css/all.min.css';
-
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 
 :root {
   --font-primary: "Poppins", sans-serif;
@@ -44,7 +43,6 @@
   opacity: 1;
 }
 
-
 /* Custom scrollbar for the sidebar */
 .sidebar-scroll::-webkit-scrollbar {
   width: 2px;
@@ -63,11 +61,9 @@
   background-color: #a0aec0; /* Tailwind gray-500 */
 }
 
-
 /* Main Scroll Bar */
 .main-scroll::-webkit-scrollbar {
   width: 4px;
-  height: 4px;
 }
 
 .main-scroll::-webkit-scrollbar-track {
