odified: product and shop

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@
 /* Main Scroll Bar */
 .main-scroll::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 .main-scroll::-webkit-scrollbar-track {
