--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   }
 }
 
+.p-progress-spinner-circle.custom-white {
+  stroke: white !important;
+}
+
 .custom-swiper .swiper-pagination-bullet {
   background-color: white; /* default bullet color */
   opacity: 0.7;
