--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   z-index: 10;
-  /* background-color: #f5c518; */
+  background-color: #f5c518;
   transition: 0.6s;
 }
 
