--- a/src/assets/css/mediaquery.css
+++ b/src/assets/css/mediaquery.css
@@ -1,4 +1,4 @@
-@media (max-width: 1150px) {
+/* @media (max-width: 1150px) {
   .services-container {
     flex-direction: row;
   }
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
   }
-}
+} */
 
 /* Make sure the icon has transform origin set */
 .pendulum-icon {
